umb-service/producer/umb-producer-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: umb-producer
  labels:
    app: umb-producer
spec:
  replicas: 1
  strategy:
    type: Rolling
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - umb-producer
        from:
          kind: ImageStreamTag
          name: 'umb:latest'
  template:
    metadata:
      name: "umb-producer"
      labels:
        app: umb-producer
    spec:
      containers:
        - name: umb-producer
          imagePullPolicy: Always
          command: ["python", "./producer.py"]
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
          ports:
          - containerPort: 8080
            protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/umb
            - name: umb-certs
              mountPath: /etc/umb-certs
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: "umb"
        - name: umb-certs
          secret:
            defaultMode: 420
            secretName: umb-certs
