umb-service/producer/umb-producer-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: umb-producer
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: umb-producer
